--- a/defstyle.css
+++ b/defstyle.css
@@ -14,7 +14,7 @@
 
     body {
       font-family: "Noto Sans Georgian", sans-serif;
-      background: white;
+      background: black;
       color: #fffbe8;
       margin: 0;
       height: 100vh;
@@ -26,7 +26,7 @@
 
     #quiz-container {
       position: relative;
-      max-width: 800px;
+      max-width: 1000px;
       width: 100%;
       padding: 20px;
       background: #221c17;
@@ -170,3 +170,4 @@
     body.light #close-btn:hover, body.light #mode-switch:hover { color: #000; }
 
     body.light #restart { background: #573a29; color: #f3d3ae; }
+
