--- a/defstyle.css
+++ b/defstyle.css
@@ -29,7 +29,7 @@
       max-width: 800px;
       width: 100%;
       padding: 20px;
-      background: #221c17;
+      background: #181818;
       border-radius: 20px;
       box-shadow: 0px 4px 12px rgba(0,0,0,0.15);
       text-align: center;
@@ -170,6 +170,7 @@
     body.light #close-btn:hover, body.light #mode-switch:hover { color: #000; }
 
     body.light #restart { background: #573a29; color: #f3d3ae; }
+
 
 
 
