--- a/defstyle.css
+++ b/defstyle.css
@@ -1,1 +1,342 @@
-https://raw.githubusercontent.com/David3dArt/UGSTUFF/refs/heads/main/defstyle2.css
+    /* --- SCROLLBARS --- */
+    ::-webkit-scrollbar { 
+      width: 0.3rem; 
+      background-color: #00000000; 
+    }
+    ::-webkit-scrollbar-track { 
+      border-radius: 10px; 
+      background-color: #18181800; 
+    }
+    ::-webkit-scrollbar-thumb { 
+      background: #fff1e0; 
+      border-radius: 20px; 
+    }
+
+    body {
+      font-family: "Noto Sans Georgian", sans-serif;
+      background: black;
+      color: #fffbe8;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.3s ease;
+    }
+
+    #quiz-container {
+      position: relative;
+      max-width: 800px;
+      width: 100%;
+      padding: 20px;
+      background: #221c17;
+      border-radius: 20px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.15);
+      text-align: center;
+      transition: 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      overflow-y: auto;
+    }
+
+    /* --- FADE --- */
+    #quiz-container.fade-out { animation: fadeOut 0.2s forwards; }
+    #quiz-container.fade-in { animation: fadeIn 0.2s forwards; }
+    @keyframes fadeOut { 0% {opacity:1;} 100% {opacity:0;} }
+    @keyframes fadeIn { 0% {opacity:0;} 100% {opacity:1;} }
+
+    h1 { 
+      font-size: 16px; 
+      text-align: center; 
+      margin-top: 10px; 
+      transition: 0.3s ease;
+    }
+
+    #question h2 { 
+      font-size:21px; 
+      text-align:center;  
+      margin:10px 0; 
+      font-weight:600;
+      letter-spacing: 0.3px;
+      line-height: 1.4;
+    }
+
+    .option {
+      display: block;
+      background: #312820;
+      margin: 16px 0px;
+      padding: 10px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.3s ease;
+      border: 2px solid transparent;
+      font-size: 21px;
+      text-align: center;
+      letter-spacing: 0.3px;
+      line-height: 1.8;
+      font-weight: 500;
+    }
+
+    /* --- FIXED: remove hover color conflict when pressed --- */
+    .option:hover:not(.correct):not(.wrong):not(.skip) { 
+      border-color: hsl(28, 21%, 22%); 
+      background: hsl(28, 21%, 18%);
+    }
+
+    .option.correct { 
+      border-color: #39eb33; 
+      background: #312820;
+    }
+
+    .option.wrong { 
+      border-color: #ff2c2c; 
+      background: #312820;
+    }
+
+    .option.skip { 
+      background: #ffddc1; 
+      color: #221c17; 
+      font-weight: 600;
+    }
+
+    .option.skip:hover {
+        background: #ffc077;
+        color: #221c17;
+        border: 2px solid #ffddb3;
+      }
+
+
+    #result { 
+      font-size: 20px; 
+      font-weight: bold; 
+      margin: 10px 0;
+      color: #f3d3ae; 
+      order: 3;
+    }
+
+    #restart {
+      display: none;
+      margin: 10px 0;
+      padding: 15px 15px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      background: #ffddc1; 
+      color: #221c17; 
+      cursor: pointer;
+      font-weight: 600;
+      order: 4;
+      align-self: center;
+    }
+
+    .option .mjx-chtml { 
+      line-height: 1.1; 
+      vertical-align: middle; 
+      margin: 0; 
+    }
+
+    .option.has-math { 
+      padding-top: 2px; 
+      padding-bottom: 2px; 
+    }
+
+    /* --- TOP BAR --- */
+    #top-bar {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    #close-btn { 
+      position: static;
+      font-size: 20px;
+      font-weight: 600;
+      color: #ffddc1;
+      cursor: pointer;
+      user-select: none;
+      transition: 0.3s ease;
+      margin-left: 10px;
+      margin-right: 5px;
+      display: none; /* hide on startup */
+    }
+
+    #close-btn:hover { color: #ffc49d; transform: scale(1.3);}
+
+    /* --- LIGHT/DARK SWITCH --- */
+    #mode-switch {
+      font-size: 20px;
+      cursor: pointer;
+      color: #000000;
+      user-select: none;
+      transition: 0.3s ease;
+      margin-right: 0;
+    }
+    #mode-switch:hover { color: #ffffff; scale: 1.3; }
+
+    #progress-container { 
+      flex: 1;
+      width: 100%; 
+      background: hsl(50, 10%, 15%); 
+      border-radius: 30px; 
+      height: 10px; 
+      overflow: hidden; 
+      transition: 0.3s ease;
+    }
+
+    #progress-bar { 
+      height: 100%; 
+      width: 0%; 
+      background: #ffce84; 
+      transition: 0.3s ease; 
+      border-radius: inherit; 
+    }
+
+    #upload-area { 
+      border: 2px dashed #f3d3ae; 
+      padding: 30px; 
+      border-radius: 10px; 
+      margin: 20px 0; 
+      cursor: pointer; 
+      transition: 0.3s ease; 
+      font-size: 20px; 
+      order: 2;
+    }
+
+    #upload-area:hover { 
+      border-color: #ffc98b; 
+      font-size: 21px;
+      color: #ffc98b;
+    }
+
+    /* --- LIGHT MODE --- */
+    body.light {
+      background: #cc9867;
+      color: #422c20;
+    }
+    body.light #quiz-container {
+      background: #ffe7cb;
+      color: #573a29;
+    }
+    body.light .option {
+      background: #f3d3ae;
+      color: #422c20;
+      border-color: transparent ;
+      font-weight: 500;
+    }
+
+
+    body.light #result { 
+      font-size: 20px; 
+      font-weight: bold; 
+      margin: 10px 0;
+      color: #573a29; 
+      order: 3;
+    }
+    
+    body.light .option.skip {
+    background: #422c20;
+    color: #f3d3ae;
+    border-color: transparent;
+    }
+
+
+    /* New: hover style for skip button in light mode */
+    body.light .option.skip:hover {
+      background: #6e4933;
+      border-color: rgb(167, 117, 89);
+    }
+
+    body.light .option:hover:not(.correct):not(.wrong):not(.skip) {
+      background-color: #ffe0bd;
+      border-color: #d39f64; 
+    }
+
+    body.light .option.correct { 
+      border-color: #239914; 
+      background: #f3d3ae;
+    }
+    body.light .option.wrong { 
+      border-color: #bd1a1a; 
+      background: #f3d3ae;
+    }
+    body.light #progress-container {
+      background: #f3d3ae;
+    }
+    body.light #progress-bar {
+      background: #573a29;
+    }
+    body.light #upload-area {
+      border-color: #573a29;
+      color: #573a29;
+      font-weight: 600;
+    }
+    body.light #close-btn,
+    body.light #mode-switch {
+      color: #573a29;
+    }
+    body.light #close-btn:hover,
+    body.light #mode-switch:hover {
+      color: #000;
+    }
+    body.light #restart {
+      background: #573a29;
+      color: #f3d3ae;
+    }
+
+    /* --- MOBILE --- */
+    @media (max-width: 768px) {
+      body { 
+        align-items: flex-start; 
+        padding-top:0; 
+        background-color: #221c17; 
+        overflow: auto; 
+      }
+
+      #quiz-container { 
+        max-width:100%; 
+        width:100%; 
+        border-radius:0; 
+        box-shadow:none; 
+        padding:20px 15px; 
+        height:auto; 
+        display:flex; 
+        flex-direction:column;
+      }
+
+      #progress-container { margin-bottom:3px; }
+      h1 { font-size:16px; }
+      #question h2 { 
+        font-size:16px; 
+        text-align:center;  
+        margin:10px 0; 
+        font-weight:400;
+      }
+      .option { 
+        font-size:18px; 
+        padding:2px 0; 
+        border:2px solid transparent; 
+        margin:10px 0;
+      }
+      #options { 
+        flex:1; 
+        padding-bottom:20px;
+        font-size:18px;
+        overflow: hidden; 
+        margin-bottom: 60px;
+      }
+      #result { 
+        font-size:18px; 
+        margin:10px 0;
+      }
+      #restart { 
+        font-size:16px; 
+        padding:10px 20px;
+        margin:10px auto;
+      }
+
+      body.light {
+        background: #ffe7cb;
+      }
+    }
