--- a/defstyle.css
+++ b/defstyle.css
@@ -1,4 +1,3 @@
-
 @font-face {
 font-family: "TBCContractica book";
 src: url("https://github.com/David3dArt/UGSTUFF/raw/refs/heads/main/fonttt/TBCContracticaCAPS-Book.ttf") format("truetype");
@@ -8,7 +7,7 @@ font-display: swap;
 
 /* --- SCROLLBARS --- */
     ::-webkit-scrollbar { 
-      width: 0.3rem; 
+      width: 0.4rem; 
       background-color: #00000000; 
     }
     ::-webkit-scrollbar-track { 
@@ -68,7 +67,7 @@ font-display: swap;
       font-size:1.313rem; 
       text-align:center;  
       margin:10px 0; 
-      font-weight:600;
+      font-weight:400;
       letter-spacing: 0.3px;
       line-height: 1.4;
     }
@@ -86,7 +85,7 @@ font-display: swap;
       text-align: center;
       letter-spacing: 0.3px;
       line-height: 1.8;
-      font-weight: 500;
+      font-weight: 400;
       padding-left: 20px;
     }
 
@@ -320,7 +319,7 @@ font-display: swap;
       #progress-container { margin-bottom:3px; }
       h1 { font-size:1rem; }
       #question h2 { 
-        font-size:16px; 
+        font-size:1.25rem; 
         text-align:center;  
         margin:10px 0; 
         font-weight:400;
@@ -380,3 +379,4 @@ font-display: swap;
     #options[style*="display: grid"] {
       gap: 12px 15px;
     }
+
