--- a/defstyle.css
+++ b/defstyle.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
 font-family: "TBCContractica book";
 src: url("https://github.com/David3dArt/UGSTUFF/raw/refs/heads/main/fonttt/TBCContracticaCAPS-Book.ttf") format("truetype");
@@ -102,13 +100,13 @@ font-display: swap;
     }
 
     .option.correct { 
-      border-color: #39eb33; 
-      background: #312820;
+      border-color: #40c43c; 
+      background: hsl(19, 37%, 19%);
     }
 
     .option.wrong { 
-      border-color: #ff2c2c; 
-      background: #312820;
+      border-color: #e62d2d; 
+      background: hsl(19, 37%, 19%);
     }
 
     .option.skip { 
@@ -198,7 +196,7 @@ font-display: swap;
     #progress-container { 
       flex: 1;
       width: 100%; 
-      background: hsl(50, 10%, 15%); 
+      background: hsl(18, 34%, 11%); 
       border-radius: 30px; 
       height: 10px; 
       overflow: hidden; 
