--- a/defstyle.css
+++ b/defstyle.css
@@ -2,7 +2,6 @@
     font-family: 'TBC Contractica';
     src: url('https://github.com/David3dArt/UGSTUFF/raw/refs/heads/main/css%20font/TBCContracticaCAPS-Book.woff');
     font-weight: normal;
-    font-style: normal;
     font-display: swap;
 }
 
@@ -10,7 +9,6 @@
     font-family: 'TBC Contractica';
     src: url('https://github.com/David3dArt/UGSTUFF/raw/refs/heads/main/css%20font/TBCContracticaCAPS-Bold.woff');
     font-weight: bold;
-    font-style: normal;
     font-display: swap;
 }
 
@@ -79,7 +77,7 @@
       font-size:1.313rem; 
       text-align:center;  
       margin:10px 0; 
-      font-weight:400;
+      font-weight:bold;
       letter-spacing: 0.3px;
       line-height: 1.4;
     }
@@ -391,14 +389,3 @@
     #options[style*="display: grid"] {
       gap: 12px 15px;
     }
-
-
-
-
-
-
-
-
-
-
-
